--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap"
       rel="stylesheet" />
-    <title>Login Page</title>
+    <title>Tweet App</title>
   </head>
   <body>
     <div id="root"></div>
